src/objects/Chart_of_Account__c.object
<CustomObject>
    <fields>
        <fullName>Board_Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Board Meeting</label>
        <referenceTo>Board_Meeting__c</referenceTo>
        <relationshipLabel>Chart of Accounts</relationshipLabel>
        <relationshipName>Chart_of_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <referenceTo>Metric__c</referenceTo>
        <relationshipLabel>Chart of Accounts</relationshipLabel>
        <relationshipName>Chart_of_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Chart of Account</label>
    <nameField>
        <displayFormat>CoA-{00000}</displayFormat>
        <label>Chart of Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chart of Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>